use flexbox to center

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 <body>
     <md-content class="wrapper" layout="column">
         <div class="view" ng-view></div>
+        <div class="spacer"></div>
     </md-content>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
